--- a/Photography.html
+++ b/Photography.html
@@ -61,49 +61,49 @@
         <div class="container ">
             <div class="row">
               <div class="col-lg-8 col-lg-offset-2 col-sm-6 text-center photos">
-                    <img src="Photography/img/DSC_0299e.jpg"  />
+                    <a href="GraphicDesign.html" class="portfolio-box portfolio-link"><img src="Photography/img/DSC_0299e.jpg"/></a>
                     <p align="middle">Natasha at Land's End - ISO 500, 1/500s, f/4, 50mm, Adobe Photoshop</p>
               </div>
             </div>
             <div class="row">
               <div class="col-lg-8 col-lg-offset-2 col-sm-6 text-center photos">
-                    <img src="Photography/img/DSC_0281elo.jpg"  />
+                    <a href="GraphicDesign.html" class="portfolio-box portfolio-link"><img src="Photography/img/DSC_0281elo.jpg"/></a>
                     <p align="middle">Natasha at Land's End 2- ISO 5000, 1/500s, f/4, 50mm, Adobe Photoshop</p>
               </div>
             </div>
             <div class="row">
               <div class="col-lg-8 col-lg-offset-2 col-sm-6 text-center photos">
-                    <img src="Photography/img/DSC_0256elo.jpg"  />
+                    <a href="GraphicDesign.html" class="portfolio-box portfolio-link"><img src="Photography/img/DSC_0256elo.jpg"/></a>
                     <p align="middle">Natasha at Land's End 3- ISO 160, 1/500s, f/4, 50mm, Adobe Photoshop</p>
               </div>
             </div>
             <div class="row">
               <div class="col-lg-8 col-lg-offset-2 col-sm-6 text-center photos">
-                    <img src="Photography/img/DSC_0562e.jpg"  />
+                    <a href="GraphicDesign.html" class="portfolio-box portfolio-link"><img src="Photography/img/DSC_0562e.jpg"/></a>
                     <p align="middle">Cathedral of Saint Mary of the Assumption - ISO 1250, 1/80s f/2.8 50mm, Adobe Photoshop</p>
               </div>    
             </div>           
             <div class="row">
               <div class="col-lg-8 col-lg-offset-2 col-sm-6 text-center photos">
-                    <img src="Photography/img/DSC_0455e.jpg"  />
+                    <a href="GraphicDesign.html" class="portfolio-box portfolio-link"><img src="Photography/img/DSC_0455e.jpg"/></a>
                     <p align="middle">Couple in Berkeley - ISO 100, 8.7s, f/14, 50mm, Adobe Photoshop</p>
               </div>
             </div>
             <div class="row">
               <div class="col-lg-8 col-lg-offset-2 col-sm-6 text-center photos">
-                    <img src="Photography/img/DSC_0705e.jpg"  />
+                    <a href="GraphicDesign.html" class="portfolio-box portfolio-link"><img src="Photography/img/DSC_0705e.jpg"/></a>
                     <p align="middle">Golden Gate Bridge from Tiburon, CA - ISO 100, 1/3s, f/16 50mm, Adobe Photoshop</p>
               </div>
             </div>
             <div class="row">
               <div class="col-lg-8 col-lg-offset-2 col-sm-6 text-center photos">
-                    <img src="Photography/img/DSC_0810elo.jpg"  />
+                    <a href="GraphicDesign.html" class="portfolio-box portfolio-link"><img src="Photography/img/DSC_0810elo.jpg"/></a>
                     <p align="middle">Golden Gate Bridge from Tiburon, CA - ISO 100, 1/3s, f/16 50mm, Adobe Photoshop</p>
               </div>
             </div>
             <div class="row">
               <div class="col-lg-8 col-lg-offset-2 col-sm-6 text-center photos">
-                    <img src="Photography/img/DSC_0996elo.jpg"  />
+                    <a href="GraphicDesign.html" class="portfolio-box portfolio-link"><img src="Photography/img/DSC_0996elo.jpg"/></a>
                     <p align="middle">Teacups at Disneyland - ISO 100, 2s, f/8 50mm, Adobe Photoshop</p>
               </div>
             </div>
@@ -115,14 +115,15 @@
                     <p>
                        <a href="mailto:vincent.escueta22@gmail.com" target="_blank"><i class="far fa-envelope"></i></a>
                        <a href="https://www.linkedin.com/in/vincentescueta/" target="_blank"><i class="fab fa-linkedin"></i></a>
-                       <a href="https://github.com/vincent-escueta22" target="_blank"><i class="fab fa-github-alt"></i>
+                       <a href="https://github.com/vincent-escueta22" target="_blank"><i class="fab fa-github-alt"></i></a>
                        <a href="https://www.facebook.com/vincent.escueta22" target="_blank"><i class="fab fa-facebook"></i></a>
                        <a href="https://www.imdb.com/name/nm10309356/?ref_=m_ttfcd_cr177" target="_blank"><i class="fab fa-imdb"></i></a>
                        <a href="https://www.instagram.com/vincentescueta/" target="_blank"><i class="fab fa-instagram"></i></a>
+                       <a href="https://500px.com/vescueta/" target="_blank"><i class="fab fa-500px"></i></a>
                     </p>
                     <p>Last Updated: December 18, 2018</p>    
             </div>
-        </div>
+        </div><
     </section>
     <script src="js/jquery.js"></script>
 
