--- a/GraphicDesign.html
+++ b/GraphicDesign.html
@@ -72,10 +72,11 @@
                     <p>
                        <a href="mailto:vincent.escueta22@gmail.com" target="_blank"><i class="far fa-envelope"></i></a>
                        <a href="https://www.linkedin.com/in/vincentescueta/" target="_blank"><i class="fab fa-linkedin"></i></a>
-                       <a href="https://github.com/vincent-escueta22" target="_blank"><i class="fab fa-github-alt"></i>
+                       <a href="https://github.com/vincent-escueta22" target="_blank"><i class="fab fa-github-alt"></i></a>
                        <a href="https://www.facebook.com/vincent.escueta22" target="_blank"><i class="fab fa-facebook"></i></a>
                        <a href="https://www.imdb.com/name/nm10309356/?ref_=m_ttfcd_cr177" target="_blank"><i class="fab fa-imdb"></i></a>
                        <a href="https://www.instagram.com/vincentescueta/" target="_blank"><i class="fab fa-instagram"></i></a>
+                       <a href="https://500px.com/vescueta/" target="_blank"><i class="fab fa-500px"></i></a>
                     </p>
                     <p>Last Updated: December 18, 2018</p>    
             </div>
