--- a/Photography.html
+++ b/Photography.html
@@ -61,50 +61,139 @@
         <div class="container ">
             <div class="row">
               <div class="col-lg-8 col-lg-offset-2 col-sm-6 text-center photos">
-                    <a href="GraphicDesign.html" class="portfolio-box portfolio-link"><img src="Photography/img/DSC_0299e.jpg"/></a>
-                    <p align="middle">Natasha at Land's End - ISO 500, 1/500s, f/4, 50mm, Adobe Photoshop</p>
+                    <a href="https://500px.com/photo/287734027/natasha-at-land-s-end-by-vincent-escueta" class="photo-link">
+                        <img src="Photography/img/DSC_0299e.jpg" class="img-responsive" alt=""/>
+                        <div class="photo-link-caption">
+                            <div class="photo-link-caption-content">
+                                <div class="project-category text-faded">
+                                    Natasha at Land's End
+                                </div>
+                                <div class="project-name">
+                                    ISO 500, 1/500s, f/4, 50mm, Adobe Photoshop
+                                </div>
+                            </div>
+                        </div>
+                    </a>
               </div>
             </div>
             <div class="row">
               <div class="col-lg-8 col-lg-offset-2 col-sm-6 text-center photos">
-                    <a href="GraphicDesign.html" class="portfolio-box portfolio-link"><img src="Photography/img/DSC_0281elo.jpg"/></a>
-                    <p align="middle">Natasha at Land's End 2- ISO 5000, 1/500s, f/4, 50mm, Adobe Photoshop</p>
+                    <a href="https://500px.com/photo/287739959/natasha-at-land-s-end-2-by-vincent-escueta" class="photo-link">
+                        <img src="Photography/img/DSC_0281elo.jpg" class="img-responsive" alt=""/>
+                        <div class="photo-link-caption">
+                            <div class="photo-link-caption-content">
+                                <div class="project-category text-faded">
+                                    Natasha at Land's End 2
+                                </div>
+                                <div class="project-name">
+                                    ISO 5000, 1/500s, f/4, 50mm, Adobe Photoshop
+                                </div>
+                            </div>
+                        </div>
+                    </a>
               </div>
             </div>
             <div class="row">
               <div class="col-lg-8 col-lg-offset-2 col-sm-6 text-center photos">
-                    <a href="GraphicDesign.html" class="portfolio-box portfolio-link"><img src="Photography/img/DSC_0256elo.jpg"/></a>
-                    <p align="middle">Natasha at Land's End 3- ISO 160, 1/500s, f/4, 50mm, Adobe Photoshop</p>
+                    <a href="https://500px.com/photo/287734023/natasha-at-land-s-end-3-by-vincent-escueta" class="photo-link">
+                        <img src="Photography/img/DSC_0256elo.jpg" class="img-responsive" alt=""/>
+                        <div class="photo-link-caption">
+                            <div class="photo-link-caption-content">
+                                <div class="project-category text-faded">
+                                    Natasha at Land's End 3
+                                </div>
+                                <div class="project-name">
+                                    ISO 160, 1/500s, f/4, 50mm, Adobe Photoshop
+                                </div>
+                            </div>
+                        </div>
+                    </a>
               </div>
             </div>
             <div class="row">
               <div class="col-lg-8 col-lg-offset-2 col-sm-6 text-center photos">
-                    <a href="GraphicDesign.html" class="portfolio-box portfolio-link"><img src="Photography/img/DSC_0562e.jpg"/></a>
-                    <p align="middle">Cathedral of Saint Mary of the Assumption - ISO 1250, 1/80s f/2.8 50mm, Adobe Photoshop</p>
+                    <a href="https://500px.com/photo/287733999/cathedral-of-saint-mary-of-the-assumption-by-vincent-escueta" class="photo-link">
+                        <img src="Photography/img/DSC_0562e.jpg" class="img-responsive" alt=""/>
+                        <div class="photo-link-caption">
+                            <div class="photo-link-caption-content">
+                                <div class="project-category text-faded">
+                                    Cathedral of Saint Mary of the Assumption
+                                </div>
+                                <div class="project-name">
+                                    ISO 1250, 1/80s f/2.8 50mm, Adobe Photoshop
+                                </div>
+                            </div>
+                        </div>
+                    </a>
               </div>    
             </div>           
             <div class="row">
               <div class="col-lg-8 col-lg-offset-2 col-sm-6 text-center photos">
-                    <a href="GraphicDesign.html" class="portfolio-box portfolio-link"><img src="Photography/img/DSC_0455e.jpg"/></a>
-                    <p align="middle">Couple in Berkeley - ISO 100, 8.7s, f/14, 50mm, Adobe Photoshop</p>
+                    <a href="https://500px.com/photo/287741141/couple-in-berkeley-by-vincent-escueta?ctx_page=1&from=user&user_id=29351555" class="photo-link">
+                        <img src="Photography/img/DSC_0455e.jpg" class="img-responsive" alt=""/>
+                        <div class="photo-link-caption">
+                            <div class="photo-link-caption-content">
+                                <div class="project-category text-faded">
+                                    Couple in Berkeley
+                                </div>
+                                <div class="project-name">
+                                    ISO 100, 8.7s, f/14, 50mm, Adobe Photoshop
+                                </div>
+                            </div>
+                        </div>
+                    </a>
               </div>
             </div>
-            <div class="row">
+           <!--  <div class="row">
               <div class="col-lg-8 col-lg-offset-2 col-sm-6 text-center photos">
-                    <a href="GraphicDesign.html" class="portfolio-box portfolio-link"><img src="Photography/img/DSC_0705e.jpg"/></a>
+                    <a href="GraphicDesign.html" class="photo-link">
+                    <img src="Photography/img/DSC_0705e.jpg" class="img-responsive" alt=""/>
+                    <div class="photo-link-caption">
+                            <div class="photo-link-caption-content">
+                                <div class="project-category text-faded">
+                                    Natasha at Land's End
+                                </div>
+                                <div class="project-name">
+                                    ISO 500, 1/500s, f/4, 50mm, Adobe Photoshop
+                                </div>
+                            </div>
+                        </div>
+                    </a>
                     <p align="middle">Golden Gate Bridge from Tiburon, CA - ISO 100, 1/3s, f/16 50mm, Adobe Photoshop</p>
               </div>
-            </div>
+            </div> -->
             <div class="row">
               <div class="col-lg-8 col-lg-offset-2 col-sm-6 text-center photos">
-                    <a href="GraphicDesign.html" class="portfolio-box portfolio-link"><img src="Photography/img/DSC_0810elo.jpg"/></a>
-                    <p align="middle">Golden Gate Bridge from Tiburon, CA - ISO 100, 1/3s, f/16 50mm, Adobe Photoshop</p>
+                    <a href="https://500px.com/photo/287739961/golden-gate-bridge-at-tiburon-ca-by-vincent-escueta?ctx_page=1&from=user&user_id=29351555" class="photo-link">
+                        <img src="Photography/img/DSC_0810elo.jpg" class="img-responsive" alt=""/>
+                        <div class="photo-link-caption">
+                            <div class="photo-link-caption-content">
+                                <div class="project-category text-faded">
+                                    Golden Gate Bridge from Tiburon, CA
+                                </div>
+                                <div class="project-name">
+                                    ISO 100, 1/3s, f/16 50mm, Adobe Photoshop
+                                </div>
+                            </div>
+                        </div>
+                    </a>
               </div>
             </div>
             <div class="row">
               <div class="col-lg-8 col-lg-offset-2 col-sm-6 text-center photos">
-                    <a href="GraphicDesign.html" class="portfolio-box portfolio-link"><img src="Photography/img/DSC_0996elo.jpg"/></a>
-                    <p align="middle">Teacups at Disneyland - ISO 100, 2s, f/8 50mm, Adobe Photoshop</p>
+                    <a href="https://500px.com/photo/287734033/teacups-at-disneyland-by-vincent-escueta" class="photo-link">
+                        <img src="Photography/img/DSC_0996elo.jpg" class="img-responsive" alt=""/>
+                        <div class="photo-link-caption">
+                            <div class="photo-link-caption-content">
+                                <div class="project-category text-faded">
+                                    Teacups at Disneyland
+                                </div>
+                                <div class="project-name">
+                                    ISO 100, 2s, f/8 50mm, Adobe Photoshop
+                                </div>
+                            </div>
+                        </div>
+                    </a>
               </div>
             </div>
         </div>
