--- a/Photography.html
+++ b/Photography.html
@@ -60,7 +60,7 @@
         <br><br>
         <div class="container ">
             <div class="row">
-              <div class="col-lg-6 col-sm-6 text-center photos">
+              <div class="col-lg-8 col-lg-offset-2 col-sm-6 text-center photos">
                     <a href="https://500px.com/photo/287734027/natasha-at-land-s-end-by-vincent-escueta" class="photo-link">
                         <img src="Photography/img/DSC_0299e.jpg" class="img-responsive" alt=""/>
                         <div class="photo-link-caption">
@@ -75,7 +75,9 @@
                         </div>
                     </a>
               </div>
-              <div class="col-lg-6 col-sm-6 text-center photos">
+            </div>
+            <div class="row">
+              <div class="col-lg-8 col-lg-offset-2 col-sm-6 text-center photos">
                     <a href="https://500px.com/photo/287739959/natasha-at-land-s-end-2-by-vincent-escueta" class="photo-link">
                         <img src="Photography/img/DSC_0281elo.jpg" class="img-responsive" alt=""/>
                         <div class="photo-link-caption">
@@ -92,7 +94,7 @@
               </div>
             </div>
             <div class="row">
-              <div class="col-lg-6 col-sm-6 text-center photos">
+              <div class="col-lg-8 col-lg-offset-2 col-sm-6 text-center photos">
                     <a href="https://500px.com/photo/287734023/natasha-at-land-s-end-3-by-vincent-escueta" class="photo-link">
                         <img src="Photography/img/DSC_0256elo.jpg" class="img-responsive" alt=""/>
                         <div class="photo-link-caption">
@@ -107,7 +109,9 @@
                         </div>
                     </a>
               </div>
-              <div class="col-lg-6 col-sm-6 text-center photos">
+            </div>
+            <div class="row">
+              <div class="col-lg-8 col-lg-offset-2 col-sm-6 text-center photos">
                     <a href="https://500px.com/photo/287733999/cathedral-of-saint-mary-of-the-assumption-by-vincent-escueta" class="photo-link">
                         <img src="Photography/img/DSC_0562e.jpg" class="img-responsive" alt=""/>
                         <div class="photo-link-caption">
@@ -124,7 +128,7 @@
               </div>    
             </div>           
             <div class="row">
-              <div class="col-lg-6 col-sm-6 text-center photos">
+              <div class="col-lg-8 col-lg-offset-2 col-sm-6 text-center photos">
                     <a href="https://500px.com/photo/287741141/couple-in-berkeley-by-vincent-escueta?ctx_page=1&from=user&user_id=29351555" class="photo-link">
                         <img src="Photography/img/DSC_0455e.jpg" class="img-responsive" alt=""/>
                         <div class="photo-link-caption">
@@ -139,8 +143,9 @@
                         </div>
                     </a>
               </div>
+            </div>
            <!--  <div class="row">
-              <div class="col-lg-6 col-sm-6 text-center photos">
+              <div class="col-lg-8 col-lg-offset-2 col-sm-6 text-center photos">
                     <a href="GraphicDesign.html" class="photo-link">
                     <img src="Photography/img/DSC_0705e.jpg" class="img-responsive" alt=""/>
                     <div class="photo-link-caption">
@@ -157,7 +162,8 @@
                     <p align="middle">Golden Gate Bridge from Tiburon, CA - ISO 100, 1/3s, f/16 50mm, Adobe Photoshop</p>
               </div>
             </div> -->
-              <div class="col-lg-6 col-sm-6 text-center photos">
+            <div class="row">
+              <div class="col-lg-8 col-lg-offset-2 col-sm-6 text-center photos">
                     <a href="https://500px.com/photo/287739961/golden-gate-bridge-at-tiburon-ca-by-vincent-escueta?ctx_page=1&from=user&user_id=29351555" class="photo-link">
                         <img src="Photography/img/DSC_0810elo.jpg" class="img-responsive" alt=""/>
                         <div class="photo-link-caption">
@@ -174,7 +180,7 @@
               </div>
             </div>
             <div class="row">
-              <div class="col-lg-6 col-sm-6 text-center photos">
+              <div class="col-lg-8 col-lg-offset-2 col-sm-6 text-center photos">
                     <a href="https://500px.com/photo/287734033/teacups-at-disneyland-by-vincent-escueta" class="photo-link">
                         <img src="Photography/img/DSC_0996elo.jpg" class="img-responsive" alt=""/>
                         <div class="photo-link-caption">
