--- a/Photography.html
+++ b/Photography.html
@@ -20,6 +20,14 @@
 
     <!-- Plugin CSS -->
     <link rel="stylesheet" href="css/animate.min.css" type="text/css">
+
+    <link rel="apple-touch-icon" sizes="180x180" href="favicon/apple-touch-icon.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="favicon/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="favicon/favicon-16x16.png">
+    <link rel="manifest" href="favicon/site.webmanifest">
+    <link rel="mask-icon" href="favicon/safari-pinned-tab.svg" color="#313d4b">
+    <meta name="msapplication-TileColor" content="#da532c">
+    <meta name="theme-color" content="#ffffff">
 </head>
 <body id="page-top" class="fade-out">
  <nav id="mainNav" class="navbar navbar-default navbar-fixed-top">
@@ -61,7 +69,7 @@
         <div class="container ">
             <div class="row">
               <div class="col-lg-8 col-lg-offset-2 col-sm-6 text-center photos">
-                    <a href="https://500px.com/photo/287734027/natasha-at-land-s-end-by-vincent-escueta" class="photo-link">
+                    <a href="https://500px.com/photo/287734027/natasha-at-land-s-end-by-vincent-escueta" target="_blank" class="photo-link">
                         <img src="Photography/img/DSC_0299e.jpg" class="img-responsive" alt=""/>
                         <div class="photo-link-caption">
                             <div class="photo-link-caption-content">
@@ -78,7 +86,7 @@
             </div>
             <div class="row">
               <div class="col-lg-8 col-lg-offset-2 col-sm-6 text-center photos">
-                    <a href="https://500px.com/photo/287739959/natasha-at-land-s-end-2-by-vincent-escueta" class="photo-link">
+                    <a href="https://500px.com/photo/287739959/natasha-at-land-s-end-2-by-vincent-escueta" target="_blank" class="photo-link">
                         <img src="Photography/img/DSC_0281elo.jpg" class="img-responsive" alt=""/>
                         <div class="photo-link-caption">
                             <div class="photo-link-caption-content">
@@ -95,7 +103,7 @@
             </div>
             <div class="row">
               <div class="col-lg-8 col-lg-offset-2 col-sm-6 text-center photos">
-                    <a href="https://500px.com/photo/287734023/natasha-at-land-s-end-3-by-vincent-escueta" class="photo-link">
+                    <a href="https://500px.com/photo/287734023/natasha-at-land-s-end-3-by-vincent-escueta" target="_blank" class="photo-link">
                         <img src="Photography/img/DSC_0256elo.jpg" class="img-responsive" alt=""/>
                         <div class="photo-link-caption">
                             <div class="photo-link-caption-content">
@@ -112,7 +120,7 @@
             </div>
             <div class="row">
               <div class="col-lg-8 col-lg-offset-2 col-sm-6 text-center photos">
-                    <a href="https://500px.com/photo/287733999/cathedral-of-saint-mary-of-the-assumption-by-vincent-escueta" class="photo-link">
+                    <a href="https://500px.com/photo/287733999/cathedral-of-saint-mary-of-the-assumption-by-vincent-escueta" target="_blank" class="photo-link">
                         <img src="Photography/img/DSC_0562e.jpg" class="img-responsive" alt=""/>
                         <div class="photo-link-caption">
                             <div class="photo-link-caption-content">
@@ -129,7 +137,7 @@
             </div>           
             <div class="row">
               <div class="col-lg-8 col-lg-offset-2 col-sm-6 text-center photos">
-                    <a href="https://500px.com/photo/287741141/couple-in-berkeley-by-vincent-escueta?ctx_page=1&from=user&user_id=29351555" class="photo-link">
+                    <a href="https://500px.com/photo/287741141/couple-in-berkeley-by-vincent-escueta?ctx_page=1&from=user&user_id=29351555" target="_blank" class="photo-link">
                         <img src="Photography/img/DSC_0455e.jpg" class="img-responsive" alt=""/>
                         <div class="photo-link-caption">
                             <div class="photo-link-caption-content">
@@ -146,7 +154,7 @@
             </div>
            <!--  <div class="row">
               <div class="col-lg-8 col-lg-offset-2 col-sm-6 text-center photos">
-                    <a href="GraphicDesign.html" class="photo-link">
+                    <a href="GraphicDesign.html" target="_blank" class="photo-link">
                     <img src="Photography/img/DSC_0705e.jpg" class="img-responsive" alt=""/>
                     <div class="photo-link-caption">
                             <div class="photo-link-caption-content">
@@ -164,7 +172,7 @@
             </div> -->
             <div class="row">
               <div class="col-lg-8 col-lg-offset-2 col-sm-6 text-center photos">
-                    <a href="https://500px.com/photo/287739961/golden-gate-bridge-at-tiburon-ca-by-vincent-escueta?ctx_page=1&from=user&user_id=29351555" class="photo-link">
+                    <a href="https://500px.com/photo/287739961/golden-gate-bridge-at-tiburon-ca-by-vincent-escueta?ctx_page=1&from=user&user_id=29351555" target="_blank" class="photo-link">
                         <img src="Photography/img/DSC_0810elo.jpg" class="img-responsive" alt=""/>
                         <div class="photo-link-caption">
                             <div class="photo-link-caption-content">
@@ -181,7 +189,7 @@
             </div>
             <div class="row">
               <div class="col-lg-8 col-lg-offset-2 col-sm-6 text-center photos">
-                    <a href="https://500px.com/photo/287734033/teacups-at-disneyland-by-vincent-escueta" class="photo-link">
+                    <a href="https://500px.com/photo/287734033/teacups-at-disneyland-by-vincent-escueta" target="_blank" class="photo-link">
                         <img src="Photography/img/DSC_0996elo.jpg" class="img-responsive" alt=""/>
                         <div class="photo-link-caption">
                             <div class="photo-link-caption-content">
