--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                 </button>
-                <a class="navbar-brand page-scroll" href="#page-top"><img src="favicon/favicon-32x32.png">Vincent Escueta</a>
+                <a class="navbar-brand page-scroll" href="#page-top"><img src="favicon/favicon-32x32.png" sizes="24x24">Vincent Escueta</a>
             </div>
 
             <!-- Collect the nav links, forms, and other content for toggling -->
