--- a/index.html
+++ b/index.html
@@ -124,6 +124,21 @@
                         </div>
                     </a>
                 </div>
+                <div class="col-lg-4 col-sm-6 animation">
+                    <a href="TheGenerousGhost.html" class="portfolio-box portfolio-link animation">
+                        <img src="img/altar.jpg" class="img-responsive" alt="">
+                        <div class="portfolio-box-caption">
+                            <div class="portfolio-box-caption-content">
+                                <div class="project-category text-faded">
+                                    Animation: Lighting, LookDev, Modeling
+                                </div>
+                                <div class="project-name">
+                                    Church Altar
+                                </div>
+                            </div>
+                        </div>
+                    </a>
+                </div>
 <!--             </div> -->
 <!--             <h3 class="text-center">Technical</h3> -->
 <!--             <div class="row no-gutter"> -->
