--- a/index.html
+++ b/index.html
@@ -196,13 +196,13 @@
                                     Computer Graphics
                                 </div>
                                 <div class="project-name">
-                                    PathTracer
+                                    Pathtracer & Lens Simulator
                                 </div>
                             </div>
                         </div>
                     </a>
                 </div>
-                <div class="col-lg-4 col-sm-6">
+<!--                 <div class="col-lg-4 col-sm-6">
                     <a href="LensSimulator.html" class="portfolio-box portfolio-link programming">
                         <img src="img/dragon_lens2.jpg" class="img-responsive" alt="">
                         <div class="portfolio-box-caption">
@@ -216,7 +216,7 @@
                             </div>
                         </div>
                     </a>
-                </div>
+                </div> -->
                 <div class="col-lg-4 col-sm-6">
                     <a href="Rasterizester.html" class="portfolio-box portfolio-link programming">
                         <img src="img/part8_competition.jpg" class="img-responsive" alt="">
