--- a/altar.html
+++ b/altar.html
@@ -67,7 +67,7 @@
         <div class="container ">
             <div class="row">
               <div class="col-lg-8 col-lg-offset-2 col-sm-6 text-center">
-                  <br><br><img src="Altar/img/altar.png"  />
+                  <br><br><img src="altar/img/phone_altar.png"  />
                   <p align="middle">Made with Maya and rendered with Renderman 22</p><br><br>
                   <h2>My Contributions</h2>
                   <p align="middle">I lit up the whole scene,</p>
