--- a/index.html
+++ b/index.html
@@ -125,7 +125,7 @@
                     </a>
                 </div>
                 <div class="col-lg-4 col-sm-6 animation">
-                    <a href="TheGenerousGhost.html" class="portfolio-box portfolio-link animation">
+                    <a href="altar.html" class="portfolio-box portfolio-link animation">
                         <img src="img/altar.jpg" class="img-responsive" alt="">
                         <div class="portfolio-box-caption">
                             <div class="portfolio-box-caption-content">
