--- a/altar.html
+++ b/altar.html
@@ -66,23 +66,23 @@
 <h1 align="middle">Church Altar</h1>
         <div class="container ">
             <div class="row">
-              <div class="col-lg-8 col-lg-offset-2 col-sm-6 text-center">
+              <div class="col-lg-8 col-sm-6 text-center">
                   <br><br><img src="altar/img/phone_altar.png"  />
                   <p align="middle">Made with Maya and rendered with Renderman 22</p><br><br>
                   <h2>My Contributions</h2>
                   <p align="middle">I lit up the whole scene,</p>
                   <p align="middle">did the look development on all the models,</p>
-                  <p align="middle">did the scene layout,</p
+                  <p align="middle">did the scene layout,</p>
                   <p align="middle">and modeled everything except the crucifix.</p>
                 <br><br><br><br>
                 </div>
             </div>
-            <div class="row">
+<!--             <div class="row">
               <div class="col-lg-8 col-lg-offset-2 col-sm-6 text-center photos">
                     <img src="Others/img/NameTag.png"  />
                     <p align="middle">Nametag made in Adobe Illustrator</p>
               </div>
-            </div>
+            </div> -->
             </div>
 </section>
 <section class="bg" id="resume">
