--- a/altar.html
+++ b/altar.html
@@ -66,8 +66,9 @@
 <h1 align="middle">Church Altar</h1>
         <div class="container ">
             <div class="row">
-              <div class="col-lg-6 col-sm-6 text-center">
-                  <br><br><img src="altar/img/phone_altar.png"  />
+              <div class="col-lg-8 col-lg-offset-2 col-sm-6 text-center photos">
+                  <br><br>
+                  <img src="altar/img/phone_altar.png"  />
                   <p align="middle">Made with Maya and rendered with Renderman 22</p><br><br>
                   <h2>My Contributions</h2>
                   <p align="middle">I lit up the whole scene,</p>
