--- a/altar.html
+++ b/altar.html
@@ -71,7 +71,7 @@
                   <img src="altar/img/phone_altar.png"  />
                   <p align="middle">Made with Maya and rendered with Renderman 22</p><br><br>
                   <h2>My Contributions</h2>
-                  <p align="middle">I lit up the whole scene,</p>
+                  <p align="middle">I staged the lighting forthe whole scene,</p>
                   <p align="middle">did the look development on all the models,</p>
                   <p align="middle">did the scene layout,</p>
                   <p align="middle">and modeled everything except the crucifix.</p>
@@ -98,7 +98,7 @@
                        <a href="https://www.instagram.com/vincentescueta/" target="_blank"><i class="fab fa-instagram"></i></a>
                        <a href="https://500px.com/vescueta/" target="_blank"><i class="fab fa-500px"></i></a>
                     </p>
-                    <p>Last Updated: December 18, 2018</p>    
+                    <p>Last Updated: April 30, 2019</p>    
             </div>
         </div>
     </section>
