--- a/altar.html
+++ b/altar.html
@@ -68,11 +68,10 @@
             <div class="row">
               <div class="col-lg-8 col-lg-offset-2 col-sm-6 text-center photos">
                   <br><br>
-                  <img src="altar/img/phone_altar.png"  />
+                  <img src="altar/img/altar.png"  />
                   <p align="middle">Made with Maya and rendered with Renderman 22</p><br><br>
                   <h2>My Contributions</h2>
-                  <p align="middle">I staged the lighting forthe whole scene,</p>
-                  <p align="middle">did the look development on all the models,</p>
+                  <p align="middle">I staged the lighting for the whole scene,</p>
                   <p align="middle">did the scene layout,</p>
                   <p align="middle">and modeled everything except the crucifix.</p>
                 <br><br><br><br>
@@ -98,7 +97,7 @@
                        <a href="https://www.instagram.com/vincentescueta/" target="_blank"><i class="fab fa-instagram"></i></a>
                        <a href="https://500px.com/vescueta/" target="_blank"><i class="fab fa-500px"></i></a>
                     </p>
-                    <p>Last Updated: April 30, 2019</p>    
+                    <p>Last Updated: July 15, 2019</p>    
             </div>
         </div>
     </section>
