--- a/index.html
+++ b/index.html
@@ -100,7 +100,7 @@
                         <div class="portfolio-box-caption">
                             <div class="portfolio-box-caption-content">
                                 <div class="project-category text-faded">
-                                    Animation: Lighting, LookDev, Modeling
+                                    Animation: Lighting, Modeling
                                 </div>
                                 <div class="project-name">
                                     Church Altar
@@ -321,7 +321,7 @@
                        <a href="https://www.instagram.com/vincentescueta/" target="_blank"><i class="fab fa-instagram"></i></a>
                        <a href="https://500px.com/vescueta/" target="_blank"><i class="fab fa-500px"></i></a>
                     </p>
-                    <p>Last Updated: April 30, 2019</p>    
+                    <p>Last Updated: July 15, 2019</p>    
             </div>
         </div>
 
