--- a/altar.html
+++ b/altar.html
@@ -73,7 +73,7 @@
                   <h2>My Contributions</h2>
                   <p align="middle">I staged the lighting for the whole scene,</p>
                   <p align="middle">did the scene layout,</p>
-                  <p align="middle">and modeled everything except the crucifix.</p>
+                  <p align="middle">and modeled everything except the model of Jesus.</p>
                 <br><br><br><br>
                 </div>
             </div>
