--- a/altar.html
+++ b/altar.html
@@ -69,13 +69,25 @@
               <div class="col-lg-8 col-lg-offset-2 col-sm-6 text-center photos">
                   <br><br>
                   <img src="altar/img/altar.png"  />
+              </div>
+            </div>    
+            <div class="row">
+              <div class="col-lg-8 col-lg-offset-2 col-sm-6 text-center photos">
+                  <br><br>
+                  <img src="altar/img/altar_composite.png"  />
+              </div>
+            </div>    
+            <div class="row">
+              <div class="col-lg-8 col-lg-offset-2 col-sm-6 text-center photos">
+                  <br><br>
+                  <img src="altar/img/altar_phone.png"  />
                   <p align="middle">Made with Maya and rendered with Renderman 22</p><br><br>
                   <h2>My Contributions</h2>
                   <p align="middle">I staged the lighting for the whole scene,</p>
                   <p align="middle">did the scene layout,</p>
                   <p align="middle">and modeled everything except the model of Jesus.</p>
                 <br><br><br><br>
-                </div>
+             </div>
             </div>
 <!--             <div class="row">
               <div class="col-lg-8 col-lg-offset-2 col-sm-6 text-center photos">
