--- a/altar.html
+++ b/altar.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Strict//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml" xml:lang="en" lang="en">
 <head>
-    <title>Vincent Escueta  |  Church Altar</title>
+    <title>Vincent Escueta  |  Church</title>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -63,12 +63,17 @@
     </nav>
     <header class="bg"> </header>
 <section class="bg">
-<h1 align="middle">Church Altar</h1>
+<h1 align="middle">Church</h1>
         <div class="container ">
             <div class="row">
               <div class="col-lg-8 col-lg-offset-2 col-sm-6 text-center photos">
                   <br><br>
                   <img src="altar/img/altar.png"  />
+                  <p align="middle">Made with Maya and rendered with Renderman 22</p><br><br>
+                  <h2>My Contributions</h2>
+                  <p align="middle">I staged the lighting for the whole scene,</p>
+                  <p align="middle">did the scene layout,</p>
+                  <p align="middle">and modeled everything except the model of Jesus.</p>
               </div>
             </div>    
             <div class="row">
@@ -81,11 +86,7 @@
               <div class="col-lg-8 col-lg-offset-2 col-sm-6 text-center photos">
                   <br><br>
                   <img src="altar/img/altar_phone.png"  />
-                  <p align="middle">Made with Maya and rendered with Renderman 22</p><br><br>
-                  <h2>My Contributions</h2>
-                  <p align="middle">I staged the lighting for the whole scene,</p>
-                  <p align="middle">did the scene layout,</p>
-                  <p align="middle">and modeled everything except the model of Jesus.</p>
+                  
                 <br><br><br><br>
              </div>
             </div>
