--- a/index.html
+++ b/index.html
@@ -103,7 +103,7 @@
                                     Animation: Lighting, Modeling
                                 </div>
                                 <div class="project-name">
-                                    Church Altar
+                                    St. John the Evangelist Catholic Church
                                 </div>
                             </div>
                         </div>
