--- a/altar.html
+++ b/altar.html
@@ -68,6 +68,7 @@
             <div class="row">
               <div class="col-lg-8 col-lg-offset-2 col-sm-6 text-center photos">
                   <br><br>
+                  <img src="altar/img/altar.png"  />
               </div>
             </div>    
             <div class="row">
@@ -77,9 +78,14 @@
               </div>
             </div>    
             <div class="row">
-              <div class="col-lg-8 col-lg-offset-2 col-sm-6 text-center photos">
+              <div class="col-lg-4 col-lg-offset-4 col-sm-4 text-center photos">
                   <br><br>
                   <img src="altar/img/altar_phone.png"  />
+             </div>
+            </div>
+             <div class="row">
+              <div class="col-lg-8 col-lg-offset-2 col-sm-6 text-center photos">
+                  <br><br>
                   <p align="middle">Made with Maya and rendered with Renderman 22</p><br><br>
                   <h2>My Contributions</h2>
                   <p align="middle">I staged the lighting for the whole scene,</p>
