--- a/about.html
+++ b/about.html
@@ -91,7 +91,7 @@
                 </div>
                 <div class="col-lg-6 col-sm-6 text-center">
                     <br><br>
-                    <p class="extra-padding bigger-text">Hi, my name is Vincent Escueta and I am a Render Technical Assistant at Industrial Light & Magic, alumnus of the University of California, Berkeley with a B.S. in Electrical Engineering and Computer Science, and a Diamond Bar, California native. I am working towards doing Lighting and Look Development in Animation and VFX. My skills and projects are in my résumé and portfolio. Outside of my work, I also enjoy cooking, photography, graphic design, video games, basketball, and bowling.</p>
+                    <p class="extra-padding bigger-text">Hi, my name is Vincent Escueta and I am currently a Technical Assistant at The Madison Square Garden Company, former Render Technical Assistant at Industrial Light & Magic, alumnus of the University of California, Berkeley with a B.S. in Electrical Engineering and Computer Science, and a Diamond Bar, California native. I am working towards doing Lighting and Look Development in Animation and VFX. My skills and projects are in my résumé and portfolio. Outside of my work, I also enjoy cooking, photography, graphic design, video games, basketball, and bowling.</p>
                 </div>
             </div>
         </div>
@@ -110,7 +110,7 @@
                        <a href="https://www.instagram.com/vincentescueta/" target="_blank"><i class="fab fa-instagram"></i></a>
                        <a href="https://500px.com/vescueta/" target="_blank"><i class="fab fa-500px"></i></a>
                     </p>
-                    <p>Last Updated: April 30, 2019</p>    
+                    <p>Last Updated: November 19, 2019</p>    
             </div>
         </div>
     </section>
