--- a/index.html
+++ b/index.html
@@ -89,11 +89,27 @@
                 </div>
             </div>
         </div> -->
+        
         <div class="container-fluid">
 <!--             <h2 class="text-center">Portfolio</h2> -->
 <!--             <hr class="primary"> -->
 <!--             <h3 class="text-center">Animation</h3> -->
             <div class="row no-gutter">
+                <div class="col-lg-4 col-sm-6 animation">
+                    <a href="cabin.html" class="portfolio-box portfolio-link animation">
+                        <img src="img/altar.jpg" class="img-responsive" alt="">
+                        <div class="portfolio-box-caption">
+                            <div class="portfolio-box-caption-content">
+                                <div class="project-category text-faded">
+                                    Animation: Lighting
+                                </div>
+                                <div class="project-name">
+                                    PUP Cabin
+                                </div>
+                            </div>
+                        </div>
+                    </a>
+                </div>
                 <div class="col-lg-4 col-sm-6 animation">
                     <a href="altar.html" class="portfolio-box portfolio-link animation">
                         <img src="img/altar.jpg" class="img-responsive" alt="">
@@ -217,7 +233,7 @@
                         </div>
                     </a>
                 </div> -->
-                <div class="col-lg-4 col-sm-6">
+<!--                 <div class="col-lg-4 col-sm-6">
                     <a href="Rasterizester.html" class="portfolio-box portfolio-link programming">
                         <img src="img/part8_competition.jpg" class="img-responsive" alt="">
                         <div class="portfolio-box-caption">
@@ -231,7 +247,7 @@
                             </div>
                         </div>
                     </a>
-                </div>
+                </div> -->
                 <div class="col-lg-4 col-sm-6">
                     <a href="GeoMenagerie.html" class="portfolio-box portfolio-link programming">
                         <img src="img/part6_phong.jpg" class="img-responsive" alt="">
