--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@
             <div class="row no-gutter">
                 <div class="col-lg-4 col-sm-6 animation">
                     <a href="cabin.html" class="portfolio-box portfolio-link animation">
-                        <img src="img/altar.jpg" class="img-responsive" alt="">
+                        <img src="img/cabin.jpg" class="img-responsive" alt="">
                         <div class="portfolio-box-caption">
                             <div class="portfolio-box-caption-content">
                                 <div class="project-category text-faded">
