--- a/cabin.html
+++ b/cabin.html
@@ -73,9 +73,10 @@
             </div>    
              <div class="row">
               <div class="col-lg-8 col-lg-offset-2 col-sm-6 text-center photos">
-                  <p align="middle">Made with Maya and rendered with Renderman 22</p><br><br>
+                  <p align="middle">Lighting staged in Maya and rendered with Renderman 23</p><br><br>
                   <h2>My Contributions</h2>
-                  <p align="middle">I staged the lighting for the whole scene,</p>
+                  <p align="middle">I staged the lighting.</p>
+                  <p align "middle"><a href="https://renderman.pixar.com/cabin-pup-asset?fbclid=IwAR0wlSiw5i2guHZB8TEcZ_H_Oe1N-0cl0VoUlKxmZRqQnjjPnjviqJUS-K8" target=_blank">Link to the Asset</a></p> 
                 <br><br><br><br>
              </div>
             </div>
