--- a/cabin.html
+++ b/cabin.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Strict//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml" xml:lang="en" lang="en">
 <head>
-    <title>Vincent Escueta  |  PUP Cabin</title>
+    <title>Vincent Escueta  |  PUP Rustic Cabin</title>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -63,7 +63,7 @@
     </nav>
     <header class="bg"> </header>
 <section class="bg">
-<h1 align="middle">PUP Cabin</h1>
+<h1 align="middle">PUP Rustic Cabin</h1>
         <div class="container ">
             <div class="row">
               <div class="col-lg-8 col-lg-offset-2 col-sm-6 text-center photos">
