--- a/index.html
+++ b/index.html
@@ -104,7 +104,7 @@
                                     Animation: Lighting
                                 </div>
                                 <div class="project-name">
-                                    PUP Cabin
+                                    PUP Rustic Cabin
                                 </div>
                             </div>
                         </div>
