added crucifixion of Jesus and rasterizester

--- a/index.html
+++ b/index.html
@@ -97,6 +97,21 @@
             <div class="row no-gutter">
                 <div class="col-lg-4 col-sm-6 animation">
                     <a href="cabin.html" class="portfolio-box portfolio-link animation">
+                        <img src="img/jesus_website.jpg" class="img-responsive" alt="">
+                        <div class="portfolio-box-caption">
+                            <div class="portfolio-box-caption-content">
+                                <div class="project-category text-faded">
+                                    Animation: Lighting
+                                </div>
+                                <div class="project-name">
+                                    Crucifixion of Jesus
+                                </div>
+                            </div>
+                        </div>
+                    </a>
+                </div>
+                <div class="col-lg-4 col-sm-6 animation">
+                    <a href="cabin.html" class="portfolio-box portfolio-link animation">
                         <img src="img/cabin.jpg" class="img-responsive" alt="">
                         <div class="portfolio-box-caption">
                             <div class="portfolio-box-caption-content">
@@ -233,7 +248,7 @@
                         </div>
                     </a>
                 </div> -->
-<!--                 <div class="col-lg-4 col-sm-6">
+                <div class="col-lg-4 col-sm-6">
                     <a href="Rasterizester.html" class="portfolio-box portfolio-link programming">
                         <img src="img/part8_competition.jpg" class="img-responsive" alt="">
                         <div class="portfolio-box-caption">
@@ -247,7 +262,7 @@
                             </div>
                         </div>
                     </a>
-                </div> -->
+                </div>
                 <div class="col-lg-4 col-sm-6">
                     <a href="GeoMenagerie.html" class="portfolio-box portfolio-link programming">
                         <img src="img/part6_phong.jpg" class="img-responsive" alt="">
@@ -337,7 +352,7 @@
                        <a href="https://www.instagram.com/vincentescueta/" target="_blank"><i class="fab fa-instagram"></i></a>
                        <a href="https://500px.com/vescueta/" target="_blank"><i class="fab fa-500px"></i></a>
                     </p>
-                    <p>Last Updated: November 19, 2019</p>    
+                    <p>Last Updated: April 4, 2019</p>    
             </div>
         </div>
 
